# nautilus

./: .gitignore  Cargo.toml  Justfile  README.md  Tiltfile  docker-compose-test.yml  docker-compose.yml  rustc-ice-2024-04-17T16_11_25-58546.txt  rustfmt.toml
.github/workflows/: build_push_api.yml  cicd.yml
config/: development.toml  production.toml  test.toml
docker/: Dockerfile.dev  Dockerfile.prod  Dockerfile.test  Dockerfile.test.migrations
migrations/2024-01-02-143758_init/: down.sql  up.sql
migrations/2024-02-07-022321_exercise/: down.sql  up.sql
migrations/2024-02-14-210828_beta-code/: down.sql  up.sql
migrations/2024-03-09-195004_certifications/: down.sql  up.sql
migrations/2024-04-07-183636_client_tables/: down.sql  up.sql
migrations/2024-04-10-181919_notifications/: up.sql
migrations/2024-04-15-214217_feedback/: down.sql  up.sql
migrations/2024-04-16-170232_client_add_accepted_invite_at_time/: down.sql  up.sql
migrations/2024-04-18-211709_client_form/: down.sql  up.sql
migrations/2024-04-20-000011_add_program_template_assigned_to/: down.sql  up.sql
migrations/2024-04-21-192436_add_program_status/: down.sql  up.sql
migrations/2024-04-22-162907_add_workout_complete/: down.sql  up.sql
migrations/2024-04-30-155401_add_program_complete/: down.sql  up.sql
migrations/2024-04-30-171157_workout_data_init/: down.sql  up.sql
scripts/: docker_entrypoint.sh  run_migrations.sh  tests.sh
src/: api.rs  auth.rs  db.rs  error.rs  lib.rs  main.rs  pagination.rs  schema.rs  server.rs  settings.rs  telemetry.rs  types.rs  util.rs
src/api/: common.rs  v1.rs
src/api/v1/: analytics.rs  beta.rs  certifications.rs  clients.rs  exercises.rs  feedback.rs  notification.rs  programs.rs  users.rs  workouts.rs
src/db/: models.rs  users.rs
src/db/models/: betacode.rs  certification.rs  client.rs  client_form.rs  exercise.rs  feedback.rs  notification.rs  program.rs  user.rs  workout.rs  workout_data.rs
src/telemetry/: metrics.rs  traces.rs
src/util/: extractors.rs  tests.rs
