[package]
name = "nautilus"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.dev] 
# opt-level = 1

# [profile.dev.build-override]
# opt-level = 0
# codegen-units = 256
# debug = false # when possible

[dependencies]
anyhow = "1.0.78"
axum = { version = "0.7.4", features = ["tokio", "default", "json", "macros", "http2"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
axum-macros = "0.4.0"
chrono = { version = "0.4.33", features = ["serde"] }
config = "0.14.0"
diesel = { version = "2.1.5", features = ["postgres", "uuid", "r2d2", "chrono", "serde_json", "numeric"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
# diesel_logger = "0.3.0"
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
# diesel-tracing = { version = "0.2.5", features = ["r2d2", "postgres", "statement-fields"] }
# diesel_full_text_search = "2.1.1"
gcp_auth = "0.11.0"
http = "1.0.0"
# humantime-serde = "1.1.1"
hyper = { version = "1.1.0", features = ["client","http1", "server"] }
jsonwebtoken = { version = "9.2.0", default-features = false }
moka = { version = "0.12.5", features = ["sync"] }
openssl = "*"
opentelemetry = { version = "0.22.0", features = [] }
opentelemetry-http = { version = "0.11.0", features = [ "tokio", "hyper"] }
opentelemetry-otlp = { version = "0.15.0", features = ["grpc-tonic", "logs", "trace"] }
opentelemetry-semantic-conventions = "0.14.0"
opentelemetry-stackdriver = { version = "0.19.1", features = ["gcp-authorizer"] }
# opentelemetry-stdout = { version = "0.3.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
rand = "0.8.5"
regex = "1.10.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.194"
serde_json = "1.0.109"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "signal"] }
tower = { version = "0.4.13", features = ["tracing"] }
tower-http = { version = "0.5.2", features = ["metrics", "trace", "cors", "timeout"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-core = "0.1.32"
tracing-opentelemetry = "0.23.0"
tracing-stackdriver = { version = "0.10.0", features = ["tracing-opentelemetry", "opentelemetry"] }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "json", "env-filter", "chrono"] }
ureq = { version = "2.9.6", features = ["json", "charset"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
dotenv = "0.15.0"
fake = { version = "2.9.2", features = ["derive"] }
http-body-util = "0.1.1"



# /* ------------------------------- archived ------------------------------- */
# url = "2.5.0"
# opentelemetry-prometheus = "0.14.1"
# opentelemetry-stdout = { version = "0.2.0", features = ["logs", "metrics"] }
